Try to fix button on smaller screens

--- a/client/src/app/sudoku/sudoku.component.scss
+++ b/client/src/app/sudoku/sudoku.component.scss
@@ -56,6 +56,10 @@ button:disabled {
 
 /* Difficulty Selector */
 select {
+  -webkit-appearance: none;
+  appearance: none;
+  line-height: 1.2;
+  text-align-last: center;
   background-color: #4CAF50;
   color: white;
   border: none;
